--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,16 @@
 doctype html
-html
+html(ng-app='starterApp')
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    base(href='/')
+    link(rel='stylesheet', href='/assets/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
+    link(rel='stylesheet', href='/assets/stylesheets/style.css')
+    script(src='/assets/javascript/lodash.js')
+    script(src='/assets/javascript/angular.min.js')
+    script(src='/assets/javascript/angular-route.js')
+    script(src='/assets/javascript/angular-resource.js')
+    script(src='/assets/javascript/angular-animate.js')
+    script(src='/app/app.js')
+  body(ng-controller='mainController')
     block content
