login logout functionality

--- a/public/app/partials/register.html
+++ b/public/app/partials/register.html
@@ -1,9 +1,9 @@
 <h2>Register</h2>
 
 <form ng-submit="submitRegister()">
-	<input type="text" ng-model="register.username" />
-	<input type="password" ng-model="register.password" />
-	<input type="submit" class="btn" value="Register">
+	<input class="form-control input-sm" type="text" ng-model="register.username" />
+	<input class="form-control input-sm" type="password" ng-model="register.password" />
+	<input type="submit" class="btn btn-primary" value="Register">
 </form>
 
 <p><a href="/login">Login</a></p>
