--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -1,4 +1,4 @@
 <h2>Home</h2>
 
-<p><a href="/login">Login</a></p>
-<p><a href="/register">Register</a></p>
+<p><a class="btn btn-primary" href="/login">Login</a></p>
+<p><a class="btn btn-primary" href="/register">Register</a></p>
