--- a/public/app/partials/login.html
+++ b/public/app/partials/login.html
@@ -1,9 +1,9 @@
 <h2>Login</h2>
 
 <form ng-submit="submitLogin()">
-	<input type="text" ng-model="login.username" />
-	<input type="password" ng-model="login.password" />
-	<input type="submit" class="btn" value="Login">
+	<input class="form-control input-sm" type="text" ng-model="login.username" />
+	<input class="form-control input-sm" type="password" ng-model="login.password" />
+	<input type="submit" class="btn btn-primary" value="Login">
 </form>
 
 <p><a href="/">Home</a></p>
