add basic style, add register angular functionality

--- a/public/app/partials/dashboard.html
+++ b/public/app/partials/dashboard.html
@@ -1,2 +1,4 @@
-<h2>Welcome</h2>
-<button class="btn" ng-click="logout()">Logout</button>
+<div class="whitebox">
+	<h2>Welcome</h2>
+	<button class="btn" ng-click="logout()">Logout</button>
+</div>
