--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -1,4 +1,8 @@
-<h2>Home</h2>
+<div class="whitebox">
+	<h2>Welcome to MEANjs Basic Boilerplate</h2>
 
-<p><a class="btn btn-primary" href="/login">Login</a></p>
-<p><a class="btn btn-primary" href="/register">Register</a></p>
+	<p>
+		<a href="/login">Login</a>
+		<a href="/register">Register</a>
+	</p>
+</div>
