--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden; 
 }
 
 a {
@@ -13,13 +13,24 @@ a {
 .ng-enter, .ng-leave { width:100%; position:absolute; }
 
 .ng-enter {
-	-webkit-animation:slideInDown 0.5s both ease-in;
-	-moz-animation:slideInDown 0.5s both ease-in;
-	animation:slideInDown 0.5s both ease-in;
+	-webkit-animation:slideInLeft 0.5s both ease-in;
+	-moz-animation:slideInLeft 0.5s both ease-in;
+	animation:slideInLeft 0.5s both ease-in;
 }
 
 .ng-leave {
-	-webkit-animation:slideOutUp 0.5s both ease-in;
-	-moz-animation:slideOutUp 0.5s both ease-in;
-	animation:slideOutUp 0.5s both ease-in;
+	-webkit-animation:slideOutRight 0.5s both ease-in;
+	-moz-animation:slideOutRight 0.5s both ease-in;
+	animation:slideOutRight 0.5s both ease-in;
+}
+
+.messagebox.ng-enter {
+	-webkit-animation:slideInDown 1.5s both ease-in;
+	-moz-animation:slideInDown 1.5s both ease-in;
+	animation:slideInDown 1.5s both ease-in;
+}
+.messagebox.ng-leave {
+	-webkit-animation:slideInUp 1.5s both ease-in;
+	-moz-animation:slideInUp 1.5s both ease-in;
+	animation:slideInUp 1.5s both ease-in;
 }
