--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,16 +1,20 @@
 doctype html
 html(ng-app='starterApp')
-  head
-    title= title
-    base(href='/')
-    link(rel='stylesheet', href='/assets/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
-    link(rel='stylesheet', href='/assets/stylesheets/style.css')
-    script(src='/assets/javascript/lodash.js')
-    script(src='/assets/javascript/angular.min.js')
-    script(src='/assets/javascript/angular-route.js')
-    script(src='/assets/javascript/angular-resource.js')
-    script(src='/assets/javascript/angular-animate.js')
-    script(src='/app/app.js')
-  body(ng-controller='mainController')
-    block content
+    head
+        title= title
+        base(href='/')
+        link(rel='stylesheet', href='/assets/stylesheets/bootstrap.min.css')
+        link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
+        link(rel='stylesheet', href='/assets/stylesheets/style.css')
+        link(rel='stylesheet', href='/assets/stylesheets/misc.css')
+        script(src='/assets/javascript/lodash.js')
+        script(src='/assets/javascript/angular.min.js')
+        script(src='/assets/javascript/angular-route.js')
+        script(src='/assets/javascript/angular-resource.js')
+        script(src='/assets/javascript/angular-animate.js')
+        script(src='/app/app.js')
+    body(ng-controller='mainController')
+        .container
+            .row
+                .col-sm-12(ng-controller="mainController")
+                    block content
