add ng interceptor

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,13 @@ html(ng-app='starterApp')
         script(src='/assets/javascript/angular-resource.js')
         script(src='/assets/javascript/angular-animate.js')
         script(src='/app/app.js')
+        script(src='/app/config/config.js')
+        script(src='/app/services/authServices.js')
+        script(src='/app/controllers/mainController.js')
+        script(src='/app/controllers/authController.js') 
+        script(src='/app/controllers/dashboardController.js')
+        script(src='/app/controllers/profileController.js')
+        script(src='/app/controllers/postController.js') 
     body(ng-controller='mainController')
         .container
             .row
