adding post rest

--- a/public/app/partials/posts/index.html
+++ b/public/app/partials/posts/index.html
@@ -5,6 +5,6 @@
 	</h3>
 
 	<ul>
-		<li><a href=""></a></li>
+		<li ng-repeat="post in arrPosts"><a href="/posts/{{post._id}}">{{post.title}}</a></li>
 	</ul>
 </div>
