--- a/public/app/partials/posts/view.html
+++ b/public/app/partials/posts/view.html
@@ -1,6 +1,6 @@
 <div class="whitebox">
 	<h3 clas="clearfix">
-		All Posts
+		Post Name
 		<a href="/posts" class="btn btn-primary pull-right">Back to Posts</a>
 	</h3>
 
