--- a/public/app/partials/posts/add.html
+++ b/public/app/partials/posts/add.html
@@ -1,3 +1,17 @@
 <div class="whitebox">
 	<h3>Add Post</h3>
+
+	<form name="addPostForm" ng-submit="addPostSubmit()" novalidate>
+		<p>
+			<label>Post Title</label>
+			<input class="form-control" ng-model="postTitle" required />
+		</p>
+		<p>
+			<label>Post Content</label>
+			<textarea ng-model="postContent" class="form-control" required ></textarea>
+		</p>
+		<p class="text-right">
+			<input type="submit" value="Add Post" class="btn btn-primary" ng-disabled="addPostForm.$invalid">
+		</p>
+	</form>
 </div>
