--- a/public/app/partials/posts/view.html
+++ b/public/app/partials/posts/view.html
@@ -1,8 +1,16 @@
 <div class="whitebox">
-	<h3 clas="clearfix">
-		Post Name
-		<a href="/posts" class="btn btn-primary pull-right">Back to Posts</a>
-	</h3>
 
-	 
+	<div ng-if="objPost">
+		<h3 clas="clearfix">
+			<a href="/posts" class="btn btn-default ml5 pull-right">Back to Posts</a>
+			<a href="/posts/delete/{{objPost._id}}" class="ml5 btn btn-warning pull-right">Delete Post</a>
+			<a href="/posts/edit/{{objPost._id}}" class="btn btn-primary pull-right">Edit Post</a>
+			{{objPost.title}}
+		</h3>
+		<p><small>{{objPost.createdOn | date:'MMMM dd, yyyy'}}</small></p> 
+		<div>{{objPost.body}}</div>  
+	</div>
+	<div ng-if="!objPost">
+		No post found
+	</div>
 </div>
