--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -1,8 +1,25 @@
-<div class="whitebox">
-	<h2>Welcome to MEANjs Basic Boilerplate</h2>
-
-	<p>
-		<a href="/login">Login</a>
-		<a href="/register">Register</a>
-	</p>
+<div class="row">
+	<div class="col-xs-12">
+		<table class="homeTable">
+			<tr>
+				<td align="right" valign="middle">
+					<h1 id="logo">
+						<span class="white-text">on</span>M<span class="white-text">arket</span></h1>
+					<p id="tagline">Create your FREE online STORE!</p>
+				</td>
+				<td valign="middle">
+					<ul id="list">
+						<li>Online Store management</li>
+						<li>Beautiful premade themes</li>
+						<li>Marketing and Promotions</li>
+						<li>Reports and Analytics</li>
+						<li>
+							<a href="/login" class="btn btn-primary padLR30">Login</a>
+							<a href="/register" class="btn btn-primary padLR30">Register</a>
+						</li>
+					</ul>
+				</td>
+			</tr>
+		</table>
+	</div> 
 </div>
