--- a/public/assets/stylesheets/misc.css
+++ b/public/assets/stylesheets/misc.css
@@ -71,6 +71,12 @@
 .mb20 {
 	margin-bottom: 20px !important;
 }
+.mb30 {
+	margin-bottom: 30px !important;
+}
+.mb40 {
+	margin-bottom: 40px !important;
+}
 .mt0 {
 	margin-bottom: 0px !important;
 }
@@ -94,6 +100,12 @@
 }
 .ml5 {
 	margin-left: 5px !important;
+}
+.ml10 {
+	margin-left: 10px !important;
+}
+.ml15 {
+	margin-left: 15px !important;
 }
 .ml20 {
 	margin-left: 20px !important;
@@ -151,5 +163,11 @@ img {
 .whitebox {
 	padding: 20px;
 	background: #fff;
-	box-shadow: 0 0 1px rgba(0,0,0,0.3);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+}
+
+
+/* text colors */
+.white-text {
+	color: #fff !important;
 }
