--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -120,6 +120,9 @@ table {
 	text-decoration: none;
 	color: #333;
 }
+.product-card img{
+	width: 100%;
+}
 .product-card .product-meta {
 	display: block;
 	padding: 20px;
@@ -187,6 +190,41 @@ table {
 	margin: 0;
 	color: #999;
 	font-size: 14px;
+}
+
+/* product form */
+.productImage {
+	position: relative;
+	overflow: hidden;
+	background: url(../images/add.png) 50% 50% no-repeat; 
+	cursor: pointer;
+	overflow: hidden;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+}
+.productImage.productImagePrimary { 
+	background: url(../images/primary.png) 50% 50% no-repeat;
+}
+.productImage input {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+	z-index: 10;
+	opacity: 0;
+	cursor: pointer;
+}
+.removeImage {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	display: none;
+	z-index: 20;
+}
+.productImage.hasImage:hover .removeImage {
+	display: block;
 }
 
 
