uploading images on adding new product

--- a/public/app/partials/products/edit.html
+++ b/public/app/partials/products/edit.html
@@ -70,7 +70,7 @@
 										<div class="col-sm-3">
 											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images.productImg1}" style="background-image: url({{objProduct.images.productImg1 ? '/uploads/'+objProduct.images.productImg1 : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
-												<input data-imgtype="productImg1" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<input data-imgtype="productImg1" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg1">
 												<input type="hidden" ng-model="objProduct.images.productImg1">
 											</div> 
@@ -78,7 +78,7 @@
 										<div class="col-sm-3">
 											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images.productImg2}" style="background-image: url({{objProduct.images.productImg2 ? '/uploads/'+objProduct.images.productImg2 : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
-												<input data-imgtype="productImg2" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<input data-imgtype="productImg2" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg2">
 												<input type="hidden" ng-model="objProduct.images.productImg2">
 											</div>
@@ -86,7 +86,7 @@
 										<div class="col-sm-3">
 											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images.productImg3}" style="background-image: url({{objProduct.images.productImg3 ? '/uploads/'+objProduct.images.productImg3 : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
-												<input data-imgtype="productImg3" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<input data-imgtype="productImg3" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg3">
 												<input type="hidden" ng-model="objProduct.images.productImg3">
 											</div>
@@ -94,12 +94,11 @@
 										<div class="col-sm-3">
 											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images.productImg4}" style="background-image: url({{objProduct.images.productImg4 ? '/uploads/'+objProduct.images.productImg4 : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
-												<input data-imgtype="productImg4" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<input data-imgtype="productImg4" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg4">
 												<input type="hidden" ng-model="objProduct.images.productImg4">
 											</div>
-										</div>  
-										<input type="hidden" ng-model="objProduct.image">
+										</div>   
 									</div> 
 								</div>
 							</div>
