--- a/public/app/partials/products/add.html
+++ b/public/app/partials/products/add.html
@@ -63,22 +63,38 @@
 									</div> 
 								</div>
 							</div>
-							<div class="form-card hide">
+							<div class="form-card">
 								<h2 class="form-card-title">Product Images</h2>
 								<div class="form-card-body">
 									<div class="row">
-										<div class="col-md-3">
-											<img src="/assets/images/1.jpg">
+										<div class="col-sm-3">
+											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
+												<img src="/assets/images/overlay.png">
+												<input data-imgtype="productImg1" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg1"> 
+											</div> 
 										</div> 
-										<div class="col-md-3">
-											<img src="/assets/images/1.jpg">
+										<div class="col-sm-3">
+											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
+												<img src="/assets/images/overlay.png">
+												<input data-imgtype="productImg2" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg2"> 
+											</div>
 										</div> 
-										<div class="col-md-3">
-											<img src="/assets/images/1.jpg">
+										<div class="col-sm-3">
+											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
+												<img src="/assets/images/overlay.png">
+												<input data-imgtype="productImg3" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg3"> 
+											</div>
 										</div> 
-										<div class="col-md-3">
-											<img src="/assets/images/1.jpg">
-										</div>  
+										<div class="col-sm-3">
+											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
+												<img src="/assets/images/overlay.png">
+												<input data-imgtype="productImg4" type="file" onchange="angular.element(this).scope().addProductImage(this)">
+												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg4"> 
+											</div>
+										</div>   
 									</div> 
 								</div>
 							</div>
@@ -90,10 +106,10 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-md-4">
+									<div class="col-sm-4">
 										<input type="submit" value="Draft" class="btn btn-block btn-warning">
 									</div>
-									<div class="col-md-8">
+									<div class="col-sm-8">
 										<input type="submit" value="Submit" class="btn btn-block btn-primary">
 									</div>
 								</div>
