--- a/public/app/partials/customers/index.html
+++ b/public/app/partials/customers/index.html
@@ -4,7 +4,10 @@
 			<div class="page-body">
 				<div class="row mb20">
 					<div class="col-md-12">
-						<h3 class="clearfix">Customers</h3>
+						<h3 class="clearfix">
+							Customers
+							<a href="#" class="btn btn-primary pull-right">Add Customer</a>
+						</h3>
 					</div>
 				</div>
 				<div class="row">
