--- a/public/app/partials/orders/index.html
+++ b/public/app/partials/orders/index.html
@@ -4,7 +4,10 @@
 			<div class="page-body">
 				<div class="row mb20">
 					<div class="col-md-12">
-						<h3>Orders</h3>
+						<h3 class="clearfix">
+							Orders
+							<a href="#" class="pull-right btn btn-primary">Add Order Manually</a>
+						</h3>
 					</div>
 				</div>
 				<div class="row">
