--- a/public/app/partials/products/add.html
+++ b/public/app/partials/products/add.html
@@ -4,7 +4,7 @@
 			<div class="page-body">
 				<div class="row">
 					<div class="col-md-6 col-md-push-3">
-						<form name="addPostForm" ng-submit="addPostSubmit()" novalidate>
+						<form name="addProductForm" ng-submit="addPostSubmit()" novalidate>
 							<div class="form-card">
 								<h2 class="form-card-title">Product Details</h2>
 								<div class="form-card-body">
@@ -110,7 +110,7 @@
 										<input type="submit" value="Draft" class="btn btn-block btn-warning">
 									</div>
 									<div class="col-sm-8">
-										<input type="submit" value="Submit" class="btn btn-block btn-primary">
+										<input type="submit" value="Submit" class="btn btn-block btn-primary" ng-disabled="addProductForm.$invalid">
 									</div>
 								</div>
 							</div>
