--- a/public/app/partials/register.html
+++ b/public/app/partials/register.html
@@ -7,7 +7,7 @@
 					<span class="input-group-addon" id="basic-addon1">
 						<i class="glyphicon glyphicon-envelope"></i>
 					</span>
-					<input type="email" ng-model="register.username" placeholder="Email" autocomplete="off" class="form-control input-sm" required>
+					<input type="text" ng-model="register.username" placeholder="Email address" autocomplete="off" class="form-control input-sm" required>
 				</div>
 				<div class="input-group mb10">
 					<span class="input-group-addon" id="basic-addon1">
@@ -15,6 +15,12 @@
 					</span>
 					<input type="password" ng-model="register.password" placeholder="Password" autocomplete="off" class="form-control input-sm" required>
 				</div> 
+				<div class="input-group mb10">
+					<span class="input-group-addon" id="basic-addon1">
+						<i class="glyphicon glyphicon-shopping-cart"></i>
+					</span>
+					<input type="text" ng-model="register.storename" placeholder="Shop Name" autocomplete="off" class="form-control input-sm" required>
+				</div>
 				<div class="input-group mb10">
 					<span class="input-group-addon" id="basic-addon1">
 						<i class="glyphicon glyphicon-user"></i>
