--- a/public/app/partials/settings/index.html
+++ b/public/app/partials/settings/index.html
@@ -4,31 +4,38 @@
 			<div class="page-body">
 				<div class="row">
 					<div class="col-md-6 col-md-push-3">
-						<form action="#">
+						<form name="settingsForm" ng-submit="submitSettings()">
 							<div class="form-card">
 								<h2 class="form-card-title">Store Details</h2>
 								<div class="form-card-body">
 									<p>
 										<label>Store Name</label>
-										<input type="text" class="form-control input-sm" />
+										<input type="text" class="form-control input-sm" ng-model="settings.name" required/>
 									</p>
 									<p>
 										<label>Store Description</label>
-										<textarea class="form-control input-sm"></textarea>
+										<textarea class="form-control input-sm" ng-model="settings.description" required></textarea>
 									</p> 
 									<p>
 										<label>Store Tags</label>
-										<input type="text" class="form-control input-sm" />
+										<input type="text" class="form-control input-sm" ng-model="settings.tags" />
 									</p>
 									<p>
 										<label>Store Category</label>
-										<select class="form-control input-sm">
+										<select class="form-control input-sm" ng-model="settings.category">
 											<option>Select a category</option>
+										</select>
+									</p>
+									<p>
+										<label>Store Theme</label>
+										<select class="form-control input-sm" ng-model="settings.theme">
+											<option value="bubblegum">Bubblegum</option>
+											<option value="default">Default</option>
 										</select>
 									</p>
 								</div>
 							</div> 
-							<div class="form-card">
+							<div class="form-card hide">
 								<h2 class="form-card-title">Store Theme</h2>
 								<div class="form-card-body">
 									<div class="row">
@@ -50,7 +57,7 @@
 							<div class="form-card pad20">
 								<div class="row"> 
 									<div class="col-md-12">
-										<input type="submit" value="Save Changes" class="btn btn-block btn-primary">
+										<input type="submit" value="Save Changes" class="btn btn-block btn-primary" ng-disabled="settingsForm.$invalid">
 									</div>
 								</div>
 							</div>
