--- a/views/themes/default/index.jade
+++ b/views/themes/default/index.jade
@@ -1,1 +1,70 @@
-h2 hahaha
+extends layout
+
+block content
+  #productGridWrap.col-sm-12.col-md-12
+    .productGrid
+      .product-box
+        a(href='/product')
+          span.product-box-img
+            img(src='/assets/themes/default/images/6.jpg')
+            span.product-box-shadow
+          span.product-box-meta.clearfix.show
+            span.pull-right.pad0.text-right.product-price-wrap
+              | PHP
+              span.product-price 100
+            span.pad0 Dragon Slayer And a very long title that have a two lines and shit blah
+    .productGrid
+      .product-box
+        a(href='/product')
+          span.product-box-img
+            img(src='/assets/themes/default/images/1.jpg')
+            span.product-box-shadow
+          span.product-box-meta.clearfix.show
+            span.pull-right.pad0.text-right.product-price-wrap
+              | PHP
+              span.product-price 100
+            span.pad0 Dragon Slayer
+    .productGrid
+      .product-box
+        a(href='/product')
+          span.product-box-img
+            img(src='/assets/themes/default/images/2.jpg')
+            span.product-box-shadow
+          span.product-box-meta.clearfix.show
+            span.pull-right.pad0.text-right.product-price-wrap
+              | PHP
+              span.product-price 100
+            span.pad0 Dragon Slayer And a very long title that have a two lines and shit
+    .productGrid
+      .product-box
+        a(href='/product')
+          span.product-box-img
+            img(src='/assets/themes/default/images/3.jpg')
+            span.product-box-shadow
+          span.product-box-meta.clearfix.show
+            span.pull-right.pad0.text-right.product-price-wrap
+              | PHP
+              span.product-price 100
+            span.pad0 Dragon Slayer
+    .productGrid
+      .product-box
+        a(href='/product')
+          span.product-box-img
+            img(src='/assets/themes/default/images/4.jpg')
+            span.product-box-shadow
+          span.product-box-meta.clearfix.show
+            span.pull-right.pad0.text-right.product-price-wrap
+              | PHP
+              span.product-price 100
+            span.pad0 Dragon Slayer
+    .productGrid
+      .product-box
+        a(href='/product')
+          span.product-box-img
+            img(src='/assets/themes/default/images/5.jpg')
+            span.product-box-shadow
+          span.product-box-meta.clearfix.show
+            span.pull-right.pad0.text-right.product-price-wrap
+              | PHP
+              span.product-price 100
+            span.pad0 Dragon Slayer
