--- a/views/themes/default/layout.jade
+++ b/views/themes/default/layout.jade
@@ -10,10 +10,12 @@ html
       .row.header-wrapper
         .col-xs-12
           h2#logo
-            a(href='#') ShitBrick
+            a(href='/#{objUser.store.url}') #{objUser.store.name}
             span eat shit and fuckoff...
       .row
         block content
     script(type='text/javascript', src='/assets/themes/default/js/jquery.js')
+    script(type='text/javascript', src='/assets/themes/default/js/bootstrap.js')
     script(type='text/javascript', src='/assets/themes/default/js/jquery.grid-a-licious.min.js')
+    script(type='text/javascript', src='/assets/themes/default/js/lodash.js')
     script(type='text/javascript', src='/assets/themes/default/js/elastic.js')
