--- a/public/assets/themes/default/css/styles.css
+++ b/public/assets/themes/default/css/styles.css
@@ -175,3 +175,10 @@ body {
     font-size: 20px;
     color: #000;
 }
+
+
+@media (min-width: 1200px){ 
+    .container {
+        width: 960px;
+    }
+}
