--- a/public/app/partials/products/add.html
+++ b/public/app/partials/products/add.html
@@ -67,28 +67,28 @@
 								<h2 class="form-card-title">Product Images</h2>
 								<div class="form-card-body">
 									<div class="row">
-										<div class="col-sm-3">
+										<div class="col-xs-3">
 											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg1" type="file" onchange="angular.element(this).scope().addProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg1"> 
 											</div> 
 										</div> 
-										<div class="col-sm-3">
+										<div class="col-xs-3">
 											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg2" type="file" onchange="angular.element(this).scope().addProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg2"> 
 											</div>
 										</div> 
-										<div class="col-sm-3">
+										<div class="col-xs-3">
 											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg3" type="file" onchange="angular.element(this).scope().addProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg3"> 
 											</div>
 										</div> 
-										<div class="col-sm-3">
+										<div class="col-xs-3">
 											<div class="productImage shadow" style="background-image: url(/assets/images/add.png)">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg4" type="file" onchange="angular.element(this).scope().addProductImage(this)">
