--- a/public/app/partials/products/edit.html
+++ b/public/app/partials/products/edit.html
@@ -68,7 +68,7 @@
 								<div class="form-card-body">
 									<div class="row">
 										<div class="col-xs-3">
-											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img1']}" style="background-image: url({{objProduct.images[0]['img1'] ? '/uploads/'+objProduct.images[0]['img1'] : '/assets/images/add.png'}})">
+											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img1']}" style="background-image: url({{objProduct.images[0]['img1'] ? '/uploads/'+me._id+'/products/'+objProduct.images[0]['img1'] : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg1" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg1">
@@ -76,7 +76,7 @@
 											</div> 
 										</div> 
 										<div class="col-xs-3">
-											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img2']}" style="background-image: url({{objProduct.images[0]['img2'] ? '/uploads/'+objProduct.images[0]['img2'] : '/assets/images/add.png'}})">
+											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img2']}" style="background-image: url({{objProduct.images[0]['img2'] ? '/uploads/'+me._id+'/products/'+objProduct.images[0]['img2'] : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg2" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg2">
@@ -84,7 +84,7 @@
 											</div>
 										</div> 
 										<div class="col-xs-3">
-											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img3']}" style="background-image: url({{objProduct.images[0]['img3'] ? '/uploads/'+objProduct.images[0]['img3'] : '/assets/images/add.png'}})">
+											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img3']}" style="background-image: url({{objProduct.images[0]['img3'] ? '/uploads/'+me._id+'/products/'+objProduct.images[0]['img3'] : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg3" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg3">
@@ -92,7 +92,7 @@
 											</div>
 										</div> 
 										<div class="col-xs-3">
-											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img4']}" style="background-image: url({{objProduct.images[0]['img4'] ? '/uploads/'+objProduct.images[0]['img4'] : '/assets/images/add.png'}})">
+											<div class="productImage shadow" ng-class="{'hasImage' : objProduct.images[0]['img4']}" style="background-image: url({{objProduct.images[0]['img4'] ? '/uploads/'+me._id+'/products/'+objProduct.images[0]['img4'] : '/assets/images/add.png'}})">
 												<img src="/assets/images/overlay.png">
 												<input data-imgtype="productImg4" type="file" onchange="angular.element(this).scope().editProductImage(this)">
 												<img class="removeImage" src="/assets/images/remove.png" ng-click="removeProductImage($event)" data-imgtype="productImg4">
