--- a/public/app/partials/products/index.html
+++ b/public/app/partials/products/index.html
@@ -16,7 +16,7 @@
 						<div class="col-md-4" ng-repeat="product in arrProducts">
 							<div class="product-card">
 								<a href="/products/{{product._id}}/edit">
-									<img ng-src="/uploads/{{product.images.productImg1 || product.images.productImg2 || product.images.productImg3 || product.images.productImg4 || 'none.jpg'}}">
+									<img ng-src="/uploads/{{me._id}}/products/{{product.images[0].img1 || product.images[0].img2 || product.images[0].img3 || product.images[0].img4 || 'none.jpg'}}">
 									<span class="product-meta clearfix">
 										<span class="product-price">PHP <span>{{product.price}}</span></span>
 										{{product.name}}
